# beets-aisauce

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: auto-release.yml  python.yml
beetsplug/aisauce/: __init__.py  ai.py  aisauce.py  bootleg.py  deepseek.py  plugin.py  prompts.py  types.py
tests/: test_plugin.py  test_test.py
