[project]
name = "beets-aisauce"
version = "0.0.1"
description = "AI autotagger source for beets (http://beets.io)."
authors = [{ name = "Sebastian B. Mohr", email = "sebastian@mohrenclan.de" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9, <4"

classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Text Processing :: General",
]
dependencies = [
    #"beets >= 2.4.2", # Future version with metadata_plugins support (not released yet, we should pin to master)
]


[project.urls]
homepage = "https://github.com/metasauce/beets-aisauce"
repository = "https://github.com/metasauce/beets-aisauce"
changelog = "https://github.com/metasauce/beets-aisauce/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/metasauce/beets-aisauce/issues"


[project.optional-dependencies]
typed = ["mypy"]
test = ["pytest", "pytest-cov"]
dev = ["ruff", "pre-commit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beetsplug.aisauce"]

[tool.ruff]
include = ["pyproject.toml", "plistsync/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["I", "D", "F", "E", "W", "C", "T", "B", "Q", "A"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_decorators = true
